docs/gamma/4.12/platform-management/SUMMARY.md
# Table of contents

* [Overview](overview.md)
* [Gamma Release Notes](gamma-release-notes.md)
* [Get started](get-started/README.md)
  * [Get started for new users](get-started/get-started-for-new-users/README.md)
    * [Fully self-hosted installation with Vanilla Kubernetes](get-started/get-started-for-new-users/fully-self-hosted-with-vanilla-kubernetes.md)
    * [Fully self-hosted installation with Docker](get-started/get-started-for-new-users/fully-self-hosted-with-docker.md)
  * [Get started for existing users](get-started/get-started-for-existing-users/README.md)
    * [Activate Gamma with Docker Compose](get-started/get-started-for-existing-users/activate-gamma-with-docker-compose.md)
    * [Activate Gamma with Kubernetes (Helm)](get-started/get-started-for-existing-users/activate-gamma-with-kubernetes-helm.md)
* [Install](install/README.md)
  * [Self-hosted installation guides](install/self-hosted-installation-guides/README.md)
    * [Docker](install/self-hosted-installation-guides/docker/README.md)
      * [Docker Compose](install/self-hosted-installation-guides/docker/docker-compose.md)
      * [Docker CLI](install/self-hosted-installation-guides/docker/docker-cli.md)
    * [Kubernetes](install/self-hosted-installation-guides/kubernetes/README.md)
      * [Vanilla Kubernetes](install/self-hosted-installation-guides/kubernetes/vanilla-kubernetes.md)
      * [AWS EKS](install/self-hosted-installation-guides/kubernetes/aws-eks.md)
      * [Azure AKS](install/self-hosted-installation-guides/kubernetes/azure-aks.md)
      * [OpenShift](install/self-hosted-installation-guides/kubernetes/openshift.md)
  * [Hybrid installation guides](install/hybrid-installation-guides/README.md)
    * [Docker](install/hybrid-installation-guides/docker/README.md)
      * [Docker Compose](install/hybrid-installation-guides/docker/docker-compose.md)
      * [Docker CLI](install/hybrid-installation-guides/docker/docker-cli.md)
    * [Kubernetes](install/hybrid-installation-guides/kubernetes/README.md)
      * [Vanilla Kubernetes](install/hybrid-installation-guides/kubernetes/vanilla-kubernetes.md)
      * [AWS EKS](install/hybrid-installation-guides/kubernetes/aws-eks.md)
      * [Azure AKS](install/hybrid-installation-guides/kubernetes/azure-aks.md)
      * [OpenShift](install/hybrid-installation-guides/kubernetes/openshift.md)
* [Configure Access Management](configure-access-management.md)
* [Configure OpenAPI viewer](configure-openapi-viewer.md)
* [Configure OpenTelemetry tracing and logs](configure-opentelemetry-tracing-and-logs.md)
* [Manage applications](manage-applications.md)
* [Manage dictionaries](manage-dictionaries.md)
* [Manage environment metadata](manage-environment-metadata.md)
