docs/gamma/4.13/platform-management/SUMMARY.md
# Table of contents

* [Overview](overview.md)
* [Release Notes](gamma-release-notes.md)
* [Get started](get-started/README.md)
  * [Get started for new users](get-started/get-started-for-new-users/README.md)
    * [Fully self-hosted installation with Vanilla Kubernetes](get-started/get-started-for-new-users/fully-self-hosted-with-vanilla-kubernetes.md)
    * [Fully self-hosted installation with Docker](get-started/get-started-for-new-users/fully-self-hosted-with-docker.md)
  * [Get started for existing users](get-started/get-started-for-existing-users/README.md)
    * [Activate Gamma with Docker Compose](get-started/get-started-for-existing-users/activate-gamma-with-docker-compose.md)
    * [Activate Gamma with Kubernetes (Helm)](get-started/get-started-for-existing-users/activate-gamma-with-kubernetes-helm.md)
* [Install](install/README.md)
  * [Self-hosted installation guides](install/self-hosted-installation-guides/README.md)
    * [Docker](install/self-hosted-installation-guides/docker/README.md)
      * [Docker Compose](install/self-hosted-installation-guides/docker/docker-compose.md)
      * [Docker CLI](install/self-hosted-installation-guides/docker/docker-cli.md)
    * [Kubernetes](install/self-hosted-installation-guides/kubernetes/README.md)
      * [Vanilla Kubernetes](install/self-hosted-installation-guides/kubernetes/vanilla-kubernetes.md)
      * [AWS EKS](install/self-hosted-installation-guides/kubernetes/aws-eks.md)
      * [Azure AKS](install/self-hosted-installation-guides/kubernetes/azure-aks.md)
      * [OpenShift](install/self-hosted-installation-guides/kubernetes/openshift.md)
  * [Hybrid installation guides](install/hybrid-installation-guides/README.md)
    * [Docker](install/hybrid-installation-guides/docker/README.md)
      * [Docker Compose](install/hybrid-installation-guides/docker/docker-compose.md)
      * [Docker CLI](install/hybrid-installation-guides/docker/docker-cli.md)
    * [Kubernetes](install/hybrid-installation-guides/kubernetes/README.md)
      * [Vanilla Kubernetes](install/hybrid-installation-guides/kubernetes/vanilla-kubernetes.md)
      * [AWS EKS](install/hybrid-installation-guides/kubernetes/aws-eks.md)
      * [Azure AKS](install/hybrid-installation-guides/kubernetes/azure-aks.md)
      * [OpenShift](install/hybrid-installation-guides/kubernetes/openshift.md)
* [Organization](organization/README.md)
  * [Assets](organization/assets/README.md)
    * [Manage tenants](manage-tenants.md)
    * [Manage entrypoints and sharding tags](manage-entrypoints-and-sharding-tags.md)
  * [Design](organization/design/README.md)
    * [Manage platform policies](manage-platform-policies.md)
  * [System & Security](organization/system-and-security/README.md)
    * [Configure console authentication](configure-console-authentication.md)
    * [Configure console management and schedulers](configure-console-management-and-schedulers.md)
    * [Configure CORS for the Management API](configure-console-cors.md)
    * [Configure the SMTP mail server](configure-smtp.md)
    * [Customize notification templates](customize-notification-templates.md)
    * [Review organization and environment audit logs](review-audit-logs.md)
* [Environment](environment/README.md)
  * [APIs & Assets](environment/apis-and-assets/README.md)
    * [Manage applications](manage-applications.md)
    * [Manage environment metadata](manage-environment-metadata.md)
    * [Manage dictionaries](manage-dictionaries.md)
    * [Manage shared policy groups](manage-shared-policy-groups.md)
  * [System & Security](environment/system-and-security/README.md)
    * [Configure Access Management](configure-access-management.md)
    * [Monitor gateway instances](monitor-gateway-instances.md)
    * [Configure environment alerts](configure-environment-alerts.md)
    * [Configure environment notifications](configure-environment-notifications.md)
    * [Configure Security Plan Types](configure-security-plan-types.md)
* [Team](team/README.md)
  * [Manage users](manage-users.md)
  * [Manage groups](manage-groups.md)
* [Observe](observe/README.md)
  * [Configure OpenTelemetry tracing and logs](configure-opentelemetry-tracing-and-logs.md)
  * [Save observability dashboards with the Gamma API](save-observability-dashboards.md)
* [Configure OpenAPI viewer](configure-openapi-viewer.md)
